service-jira.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira
spec:
  selector:
    app: jira
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
