service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-db
  namespace: jira
spec:
  selector:
    app: jira-db
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  type: ClusterIP
